<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/relative_layout_bg">
        <!--Header-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">
            <!--Logo-->
            <ImageView
                android:src="@drawable/android_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <!--Footer-->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@drawable/android_logo">

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_register"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/header"
            android:id="@+id/login_form">
            <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
            <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->
            <!--tools:context="com.tmp.micah.regloginmodule.activity.login"-->

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_name"
            android:textColorHint="@color/input_register_hint"
            android:textColor="@color/input_register"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:padding="10dp"/>
            <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:padding="10dp"/>
            <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:background="@color/input_register_bg"/>
            <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:background="@color/btn_register_bg"/>
            <Button
            android:id="@+id/btnLinkToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:layout_marginTop="40dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
