<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/relative_layout_bg">
        <!--Header-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">
            <!--Logo-->
            <ImageView
                android:src="@drawable/android_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <!--Footer-->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@drawable/android_logo">

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/header"
            android:id="@+id/login_form">
            <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
            <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->
            <!--tools:context="com.tmp.micah.regloginmodule.activity.login"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:hint="@string/hint_password"
                    android:singleLine="true"/>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/btn_login_bg"
                    android:text="@string/btn_login"
                    android:textColor="@color/btn_login"/>
                <Button
                    android:id="@+id/btnLinkToRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_link_to_register"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    android:textSize="15dp"
                    android:textAllCaps="false"/>

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>
    
</ScrollView>

